--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -4,4 +4,5 @@
     <%=f.input :name, placeholder: 'classic'  %>
     <%= f.submit class: 'btn btn-primary' %>
     <% end %>
+    <%= link_to 'Back to my lists', lists_path %>
 </div>
